ajoute de bouton "voir les catalogues " sur les services

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                             <div>Pour vos besoins en graphisme, en design graphique, en conception et création. Pour une
                                 image forte et des concepts graphique qui parlent par eux-mêmes.
                             </div>
+
+                            <div class="row gx-1 p-2">
+                                <div class="col div zone root p-2">Voir les catalogues</div>
+                                <div class="col-1 text-end"><i class="fa-solid fa-up-right-from-square  fs-4"></i></div>
+                            </div>
                         </a>
                     </div>
 
@@ -97,7 +102,13 @@
                             <div>Augmenter la croissances de votre organisation avec une service de création des
                                 application mobile professionnel en RDC.
                             </div>
+                            <div class="row gx-1 p-2">
+                                <div class="col div zone root p-2">Voir les catalogues</div>
+                                <div class="col-1 text-end"><i class="fa-solid fa-up-right-from-square  fs-4"></i></div>
+                            </div>
+                            
                         </a>
+                        
                     </div>
                 </div>
 
@@ -110,6 +121,11 @@
                             <div>Référenciez votre entreprise ou organisation avec un site ou application web, pour
                                 augmenter la confiance des vos partenaires.
                             </div>
+
+                            <div class="row gx-1 p-2">
+                                <div class="col div zone root p-2">Voir les catalogues</div>
+                                <div class="col-1 text-end"><i class="fa-solid fa-up-right-from-square  fs-4"></i></div>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -121,6 +137,11 @@
                             <img style="border-radius: 20px;" src="./img/site/marketing.png" height="200" width="90%"
                                 alt="" srcset="">
                             <div>Site vitrine, site d’information, site e-commerce, site webTv, site institutionnels
+                            </div>
+
+                            <div class="row gx-1 p-2">
+                                <div class="col div zone root p-2">Voir les catalogues</div>
+                                <div class="col-1 text-end"><i class="fa-solid fa-up-right-from-square  fs-4"></i></div>
                             </div>
                         </a>
                     </div>
