Modification des textes

--- a/about-us.html
+++ b/about-us.html
@@ -106,7 +106,7 @@ https://templatemo.com/tm-574-mexant
               </div>
               <div class="accordion-body">
                   <div class="content">
-                      <p><b>Nom complet</b> : Nganga Aingar Ardy 
+                      <p><b>Nom complet</b> : Nganga Zingar Ardy 
                       <br><br>Freelance basé en République Démocratique du Congo <br>Développeur web, mobile, logiciel, designer graphique et expert en marketing digital <br><br>Passionné par la technologie, l'innovation et la résolution de problèmes réels à travers des solutions numériques sur mesure</p>
                   </div>
               </div>
