--- a/contact-us.html
+++ b/contact-us.html
@@ -94,8 +94,8 @@ https://templatemo.com/tm-574-mexant
           <div id="map">
             <div class="page-heading rounded" width="100%" height="450px">
               <div class="text-center fw-bold h2 text-white">Nos resseaux sociaux</div>
-              <button class="btn btn-success"><i class="fab fa-whatsapp"></i></button>
-              <button class="btn btn-primary"><i class="fab fa-facebook"></i></button>
+              <a href="https://wa.me/243840445627/?text=Construire quelque chose ensemble" target="_blank"><button class="btn btn-success"><i class="fab fa-whatsapp"></i></button></a>
+              <a href="https://www.facebook.com/hardy.nganga.90" target="_blank"><button class="btn btn-primary"><i class="fab fa-facebook"></i></button></a>
             </div>
             
           </div>
@@ -314,7 +314,7 @@ https://templatemo.com/tm-574-mexant
         let elementMessage = document.getElementById("message").value;
 
         if (elementNom != "" && elementTelephone && elementSujet && elementMail && elementMessage){
-          openModal(titre,message);
+          openModal("Merci de nous voir contactés","Nous vous répondrons dans un lampes des temps.");
         }else{
           openModal("Certaines valeurs sont","Veuiller remplir tous les champs présents sur le formulaire afin de nous faire parvenir votre message.");
         }
