Ajustements des textes

--- a/about-us.html
+++ b/about-us.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-574-mexant
                               <ul class="sub-menu">
                                   <li><a href="about-us.html">A propos de An-Dev</a></li>
                                   <li><a href="our-services.html">Nos Services</a></li>
-                                  <li><a href="contact-us.html">Nous contacter</a></li>
+                                  <li><a href="contact-us.html">Me contacter</a></li>
                               </ul>
                           </li>
                           <li class="scroll-to-section"><a href="#testimonials">Temoignages</a></li>
@@ -229,7 +229,7 @@ https://templatemo.com/tm-574-mexant
   <section class="partners">
     <div class="container text-center">
       <center>
-        <div class="h2 text-white">Ils mons fait confiance</div>
+        <div class="h2 text-white">Ils me fait confiance</div>
         <div class="row">
           <div class="col-lg-2 col-sm-4 col-6">
             <div class="item">
