--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-574-mexant
             <div class="row">
               <div class="col-lg-8">
                 <div class="header-text">
-                  <h2 class="titre">Salut Moi c'est <em>Ardy Nganga</em> Un développeur <br><em>passionné</em></h2>
+                  <h2 class="titre">Salut Moi c'est <em>Ardy Nganga</em> <span style="color: #43ba7f;">Développeur</span> et <br><em >Graphiste</em> en freelance</h2>
                   <div class="div-dec"></div>
                   <p>spécialisé dans la création de solutions web et mobiles innovantes. Fort d'une solide expertise en développement de logiciels, je m'engage à transformer vos idées en applications fonctionnelles, performantes et intuitives.</p>
                   <div class="buttons">
@@ -90,7 +90,7 @@ https://templatemo.com/tm-574-mexant
                       <a href="about-us.html">En savoir plus</a>
                     </div>
                     <div class="orange-button">
-                      <a href="contact-us.html">Nous contacter</a>
+                      <a href="contact-us.html">Me contacter</a>
                     </div>
                   </div>
                 </div>
@@ -105,7 +105,7 @@ https://templatemo.com/tm-574-mexant
             <div class="row">
               <div class="col-lg-8">
                 <div class="header-text">
-                  <h2 class="titre"><em>Marketing Digital</em> Accélérez votre croissance en ligne<br>avec <em>Nous</em></h2>
+                  <h2 class="titre">Besoin de <em>Marketing Digital</em> Pours Accélérez votre croissance en ligne ?<br><em>C'est ici</em></h2>
                   <div class="div-dec"></div>
                   <p>Nous vous aide à maximiser votre visibilité et à atteindre vos objectifs grâce à des stratégies de marketing digital ciblées et efficaces.</p>
                   <div class="buttons">
@@ -113,7 +113,7 @@ https://templatemo.com/tm-574-mexant
                       <a href="about-us.html">En savoir plus</a>
                     </div>
                     <div class="orange-button">
-                      <a href="contact-us.html">Nous contacter</a>
+                      <a href="contact-us.html">Me contacter</a>
                     </div>
                   </div>
                 </div>
@@ -128,7 +128,7 @@ https://templatemo.com/tm-574-mexant
             <div class="row">
               <div class="col-lg-8">
                 <div class="header-text">
-                  <h2 class="titre">Conception <br> <em>Graphique</em> avec Nous</h2>
+                  <h2 class="titre">Besoin d'un logo ou des <em>Visuels</em> professionnelles <br><em>C'est ici</em></h2>
                   <div class="div-dec"></div>
                   <p>Une image vaut mille mots, surtout dans le monde digital. Je crée des identités visuelles uniques et mémorables. </p>
                   <div class="buttons">
@@ -136,7 +136,7 @@ https://templatemo.com/tm-574-mexant
                       <a href="about-us.html">En savoir plus</a>
                     </div>
                     <div class="orange-button">
-                      <a href="contact-us.html">Nous contacter</a>
+                      <a href="contact-us.html">Me contacter</a>
                     </div>
                   </div>
                 </div>
@@ -156,8 +156,8 @@ https://templatemo.com/tm-574-mexant
     <div class="container">
 
       <div class="">
-        <h3>Services de Développement et Création Digitale par Ardy Nganga Dev</h3><br>
-        <p>En tant que Ardy Nganga Dev, je suis votre partenaire pour transformer vos idées en solutions digitales concrètes et performantes. Que vous cherchiez à créer une présence en ligne percutante, à lancer une application innovante ou à propulser votre marque, je mets mon expertise à votre disposition.</p>
+        <h3>For de mon expertise et mes compétences</h3><br>
+        <p>Je suis votre partenaire pour transformer vos idées en solutions digitales concrètes et performantes. Que vous cherchiez à créer une présence en ligne percutante, à lancer une application innovante ou à propulser votre marque, je mets mon expertise à votre disposition.</p>
       </div>
 
       <div class="row">
@@ -200,7 +200,7 @@ https://templatemo.com/tm-574-mexant
           <div class="service-item">
             <i class="fas fa-question"></i>
             <h4>Ne vous posez plus des question</h4>
-            <p>Il suffi de nous contacter pour trouver la solution.</p>
+            <p>Il suffi de me contacter pour trouver la solution.</p>
           </div>
         </div>
       </div>
@@ -211,7 +211,7 @@ https://templatemo.com/tm-574-mexant
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
-          <h4>Faite-nous <em>Confiance</em> des maintenant pour <strong>Construire</strong> quelque chose ensemble</h4>
+          <h4>Faite-moi <em>Confiance</em> des maintenant pour <strong>Construire</strong> quelque chose ensemble</h4>
         </div>
         <div class="col-lg-7">
           <div class="buttons">
@@ -219,7 +219,7 @@ https://templatemo.com/tm-574-mexant
               <a href="about-us.html">En Savoir plus</a>
             </div>
             <div class="orange-button">
-              <a href="contact-us.html">Nous contacter</a>
+              <a href="contact-us.html">Me contacter</a>
             </div>
           </div>
         </div>
@@ -433,7 +433,7 @@ https://templatemo.com/tm-574-mexant
                           <span class="item item-title">Autres types de projets</span>
                           <span class="item">?</span>
                           <span class="item">?</span>
-                          <span class="item"><i class="btn btn-primary fas fa-exclamation-circle" onclick="openModal(`Autres types de projets`,`Nous sommes ouverts à la collaboration sur d'autres types de projets également. La liste cu-dessus n'est qu'un aperçu non exhaustif des catégories de projets que nous réalisons fréquemment. N'hésitez pas à nous contacter pour discuter de votre besoin spécifique !`)"></i></span>
+                          <span class="item"><i class="btn btn-primary fas fa-exclamation-circle" onclick="openModal(`Autres types de projets`,`Nous sommes ouverts à la collaboration sur d'autres types de projets également. La liste cu-dessus n'est qu'un aperçu non exhaustif des catégories de projets que nous réalisons fréquemment. N'hésitez pas à Me contacter pour discuter de votre besoin spécifique !`)"></i></span>
                         </div>
                       </div>
                     </li>
@@ -555,7 +555,7 @@ https://templatemo.com/tm-574-mexant
   <section class="partners">
     <div class="container text-center">
       <center>
-        <div class="h2 text-white">Ils mons fait confiance</div>
+        <div class="h2 text-white">Ils me fait confiance</div>
         <div class="row">
           <div class="col-lg-2 col-sm-4 col-6">
             <div class="item">
