--- a/our-services.html
+++ b/our-services.html
@@ -202,7 +202,7 @@ https://templatemo.com/tm-574-mexant
               <a href="about-us.html">En savoir plus</a>
             </div>
             <div class="orange-button">
-              <a href="contact-us.html">Nous contacter</a>
+              <a href="contact-us.html">Me contacter</a>
             </div>
           </div>
         </div>
@@ -281,7 +281,7 @@ https://templatemo.com/tm-574-mexant
   <section class="partners">
     <div class="container text-center">
       <center>
-        <div class="h2 text-white">Ils mons fait confiance</div>
+        <div class="h2 text-white">Ils me fait confiance</div>
         <div class="row">
           <div class="col-lg-2 col-sm-4 col-6">
             <div class="item">
