--- a/contact-us.html
+++ b/contact-us.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="assets/images/icon-500x500.png">
     <link href="assets/css/css2.css" rel="stylesheet">
 
-    <title>An-Dev | Nous contacter</title>
+    <title>An-Dev | Me contacter</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +77,7 @@ https://templatemo.com/tm-574-mexant
       <div class="row">
         <div class="col-lg-12">
           <div class="header-text">
-            <h2>Nous contacter</h2>
+            <h2>Me contacter</h2>
             <div class="div-dec"></div>
           </div>
         </div>
@@ -94,7 +94,7 @@ https://templatemo.com/tm-574-mexant
           <div id="map">
             <div class="page-heading rounded" width="100%" height="450px">
               <div class="text-center fw-bold h2 text-white">Nos resseaux sociaux</div>
-              <a href="https://wa.me/243840445627/?text=Construire quelque chose ensemble" target="_blank"><button class="btn btn-success"><i class="fab fa-whatsapp"></i></button></a>
+              <a href="https://wa.me/243840445627/?text=Bonjour Ardy Nganga, j'ai trouvé votre profil/portfolio en ligne et je suis trés intéréssé par vos services." target="_blank"><button class="btn btn-success"><i class="fab fa-whatsapp"></i></button></a>
               <a href="https://www.facebook.com/hardy.nganga.90" target="_blank"><button class="btn btn-primary"><i class="fab fa-facebook"></i></button></a>
             </div>
             
@@ -134,7 +134,7 @@ https://templatemo.com/tm-574-mexant
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading">
-            <h6>Nous contacter</h6>
+            <h6>Me contacter</h6>
             <h4>N'hésitez pas à nous envoyer un message</h4>
           </div>
         </div>
@@ -181,7 +181,7 @@ https://templatemo.com/tm-574-mexant
   <section class="partners">
     <div class="container text-center">
       <center>
-        <div class="h2 text-white">Ils mons fait confiance</div>
+        <div class="h2 text-white">Ils me fait confiance</div>
         <div class="row">
           <div class="col-lg-2 col-sm-4 col-6">
             <div class="item">
